# examples

onion-architecture/java/: README.md  build.gradle  settings.gradle
onion-architecture/java/com/example/api/: EnrollmentController.java
onion-architecture/java/com/example/application/: EnrollmentApplicationService.java
onion-architecture/java/com/example/application/ports/: CourseRepository.java  StudentRepository.java
onion-architecture/java/com/example/domain/: Course.java  Student.java
onion-architecture/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
onion-architecture/python/: .gitignore  Makefile  README.md  pyproject.toml
onion-architecture/python/src/example/api/: enrolment_controller.py  main.py
onion-architecture/python/src/example/application/: enrolment_application_service.py
onion-architecture/python/src/example/application/ports/: course_repository.py  student_repository.py
onion-architecture/python/src/example/domain/entities/: course.py  student.py
onion-architecture/python/src/example/domain/services/: enrolment_service.py
onion-architecture/python/src/example/infrastructure/adapters/: course_repository_impl.py  student_repository_impl.py
onion-architecture/python/src/example/infrastructure/config/: container.py
onion-architecture/python/tests/api/: test_enrolment_controller.py
onion-architecture/python/tests/application/: test_enrolment_application_service.py
onion-architecture/python/tests/domain/entities/: test_course.py  test_student.py
onion-architecture/python/tests/domain/services/: test_enrolment_service.py
onion-architecture/python/tests/infrastructure/adapters/: test_course_repository_impl.py  test_student_repository_impl.py
(+43 files in other folders)
